# scorepress-gtk

./: .gitignore  AUTHORS  LICENCES  Makefile  Makefile.ac  README  README.md  TODO  configure  configure.ac  scorepress-gtk.cbp  scorepress-gtk.depend
data/: EUPL.txt  scorepress.desktop.ac
l10n/: update-gmo.sh  update-po.sh  update-pot.sh
l10n/mo/: de.gmo
l10n/po/: general.pot  mainwnd.pot  messages.pot
l10n/po/de/: general.po  mainwnd.po  messages.po
src/: _testdoc.cpp  about_dialog.cpp  about_dialog.hh  application.cpp  application.hh  cmdline_options.cpp  cmdline_options.hh  config.cpp  config.hh.ac  configuration.cpp  configuration.hh  controller.cpp  controller.hh  i18n.hh  icon_manager.cpp  icon_manager.hh  key_listener.cpp  key_listener.hh  key_map.cpp  key_map.hh  main.cpp  mainwnd-ui.xml  mainwnd-ui.xml.hh.ac  mainwnd.cpp  mainwnd.hh  rsvg_renderer.cpp  rsvg_renderer.hh  score_widget.cpp  score_widget.hh  version.cpp  version.hh  view.cpp  view.hh
